kubernetes/apps/default/jellyfin/deploy-meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-meilisearch
  namespace: default
  labels:
    app: jellyfin
    component: meilisearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
      component: meilisearch
  template:
    metadata:
      labels:
        app: jellyfin
        component: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.54
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7700
          volumeMounts:
            - name: data
              mountPath: /meili_data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-meilisearch-data-lh
